--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="/stylesheets/style.css">
   <script src="/scripts/freet.js"></script>
   <script src="/scripts/user.js"></script>
+  <script src="/scripts/like.js"></script>
   <script src="/scripts/index.js"></script>
 </head>
 
@@ -117,6 +118,43 @@
           </div>
           <input type="submit" value="Delete Freet">
         </form>
+
+        <form id="add-like">
+          <h3>Add Like</h3>
+          <div>
+            <label for="freetId">freetID:</label>
+            <input id="freetId" name="freetId">
+          </div>
+          <input type="submit" value="Add Like">
+        </form>
+
+        <form id="view-freet-like-count">
+          <h3>View Freet Like Count</h3>
+          <div>
+            <label for="freetId">FreetId:</label>
+            <input id="freetId" name="freetId">
+          </div>
+          <input type="submit" value="View Freets Like Count">
+        </form>
+
+        <form id="get-all-likes">
+          <h3>Get All Likes</h3>
+          <input type="submit" value="Get All Likes">
+        </form>
+
+        <form id="delete-like">
+          <h3>Delete Like</h3>
+          <div>
+            <label for="authorId">authorId:</label>
+            <input id="authorId" name="authorId">
+          </div>
+          <div>
+            <label for="freetId">freetId:</label>
+            <input id="freetId" name="freetId">
+          </div>
+          <input type="submit" value="Delete Like">
+        </form>
+
       </div>
     </section>
     <section>
