use userId instead of authorId

--- a/public/index.html
+++ b/public/index.html
@@ -145,8 +145,8 @@
         <form id="delete-like">
           <h3>Delete Like</h3>
           <div>
-            <label for="authorId">authorId:</label>
-            <input id="authorId" name="authorId">
+            <label for="userId">userId:</label>
+            <input id="userId" name="userId">
           </div>
           <div>
             <label for="freetId">freetId:</label>
