--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <script src="/scripts/freet.js"></script>
   <script src="/scripts/user.js"></script>
   <script src="/scripts/like.js"></script>
+  <script src="/scripts/downvote.js"></script>
   <script src="/scripts/index.js"></script>
 </head>
 
@@ -149,6 +150,38 @@
             <input id="freetId" name="freetId">
           </div>
           <input type="submit" value="Delete Like">
+        </form>
+
+        <form id="add-downvote">
+          <h3>Add Downvote</h3>
+          <div>
+            <label for="freetId">freetID:</label>
+            <input id="freetId" name="freetId">
+          </div>
+          <input type="submit" value="Add Downvote">
+        </form>
+
+        <form id="view-freet-downvote-count">
+          <h3>View Freet Downvote Count</h3>
+          <div>
+            <label for="freetId">FreetId:</label>
+            <input id="freetId" name="freetId">
+          </div>
+          <input type="submit" value="View Freets Downvote Count">
+        </form>
+
+        <form id="get-all-downvotes">
+          <h3>Get All Downvotes</h3>
+          <input type="submit" value="Get All Downvotes">
+        </form>
+
+        <form id="delete-downvote">
+          <h3>Delete Downvote</h3>
+          <div>
+            <label for="freetId">freetId:</label>
+            <input id="freetId" name="freetId">
+          </div>
+          <input type="submit" value="Delete Downvote">
         </form>
 
       </div>
