add depolarize field

--- a/public/index.html
+++ b/public/index.html
@@ -59,6 +59,15 @@
           <input type="submit" value="Change Password">
         </form>
 
+        <form id="change-depolarize">
+          <h3>Change Depolarize Value</h3>
+          <div>
+            <label for="depolarize">New Depolarize Value (true or false boolean):</label>
+            <input id="depolarize" name="depolarize">
+          </div>
+          <input type="submit" value="Change Depolarize Value">
+        </form>
+
         <form id="sign-in">
           <h3>Sign In</h3>
           <div>
