update article updating

--- a/public/index.html
+++ b/public/index.html
@@ -238,7 +238,7 @@
         </form>
 
         <form id="add-article">
-          <h3>Add Article (need to be signed in as account with username admin)</h3>
+          <h3>Add Article (need to be signed in with Admin account (username: admin, pw: admin))</h3>
           <div>
             <label for="title">Article Title:</label>
             <input id="title" name="title">
@@ -256,7 +256,7 @@
         </form>
 
         <form id="edit-article-title">
-          <h3>Edit an existing Article's title (need to be signed in as account with username admin)</h3>
+          <h3>Edit an existing Article's title (need to be signed in with Admin account)</h3>
           <div>
             <label for="title">New Title:</label>
             <input id="title" name="title">
@@ -269,7 +269,7 @@
         </form>
 
         <form id="edit-article-content">
-          <h3>Edit an existing Article's content (need to be signed in as account with username admin)</h3>
+          <h3>Edit an existing Article's content (need to be signed in with Admin account)</h3>
           <div>
             <label for="content">New Content:</label>
             <input id="content" name="content">
@@ -282,7 +282,7 @@
         </form>
 
         <form id="delete-article">
-          <h3>Delete Article (need to be signed in as account with username admin)</h3>
+          <h3>Delete Article (need to be signed in with Admin account)</h3>
           <div>
             <label for="id">ArticleId:</label>
             <input id="id" name="id">
